@@ -29,6 +29,7 @@
 #include "Subject.hh"
 #include "FbWindow.hh"
 #include "FbTk/FbString.hh"
+#include "FbTk/ITypeAheadable.hh"
 
 #include <X11/Xutil.h>
 
@@ -36,7 +37,8 @@ class BScreen;
 class Strut;
 
 /// Holds client window info 
-class WinClient: public Focusable, public FbTk::FbWindow {
+class WinClient: public Focusable, public FbTk::ITypeAheadable,
+    public FbTk::FbWindow {
 public:
     typedef std::list<WinClient *> TransientList;
     // this structure only contains 3 elements... the Motif 2.0 structure contains
@@ -143,6 +145,7 @@ public:
     inline unsigned int maxWidth() const { return max_width; }
     inline unsigned int maxHeight() const { return max_height; }
 
+    const std::string &iTypeString() const { return m_title; }
 
     static const int PropBlackboxHintsElements = 5;
     static const int PropMwmHintsElements = 3;
